[package]
name = "sentinel"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.26"
serde = "1.0.126"
serde_json = "1.0.64"
lazy_static = "1.4.0"
# error
anyhow = "1.0.40"
# pool
lifeguard = "0.6.1" 
# logging
env_logger = "0.8.3"
log = "0.4.14"

[dev-dependencies]
criterion = "0.3"
mockall = "0.10.1"

[[bench]]
name = "benches"
path = "tests/benches.rs"
harness = false