[package]
name = "sentinel"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# monitor
# todo: heim (async) or psutil
# heim = "0.0.11"
psutil = "3.2.1"
# enum
enum-map = "1.1.0"
# num_enum = "0.5.2"
time = "0.2.26"
# serialize/deserialize
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
lazy_static = "1.4.0"
# error
anyhow = "1.0.40"
# pool
lifeguard = "0.6.1" 
# todo: conditional compile loggers
# logging 
env_logger = "0.8.3"
log4rs = "1.0.0" 
log = "0.4.14"
directories = "3.0.2"
prometheus = "0.12.0"
hostname = "0.3.1"
# todo: simplify encapsulation
# using getset = "0.1.1"



[dev-dependencies]
criterion = "0.3"
mockall = "0.10.1"
rand = "0.8.4"

[[bench]]
name = "benches"
path = "tests/benches.rs"
harness = false