[package]
name = "sentinel-macros"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["full"] }

[dev-dependencies]
sentinel-rs = { version = "0.1.0", path = "../sentinel", features = ["full"] }
