[package]
name = "sentinel-rs"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentinel-rs/latest"
repository = "https://github.com/sentinel-group/sentinel-rust"
homepage = "https://sentinelguard.io/en-us/"
description = """
The flow sentinel of your microservices.
"""
categories = ["concurrency", "network-programming", "development-tools"]
keywords = ["microservices", "flow-control", "sentinel", "reliability"]
exclude = ["/tests"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = [
  "macros",
  "monitor",
]
# If the sentinel is not utilized in asynchronous scenarios, 
# the `Sentinel` entry is not necessary to use `Arc` with `Send` trait
async = []
macros = ["sentinel-macros"]
monitor = ["prometheus"]

[dependencies]
sentinel-macros = { version = "0.1.0", path = "../sentinel-macros", optional = true }
# monitor
# todo: heim (async) or psutil
# heim = "0.0.11"
psutil = "3.2.1"
# enum
enum-map = "1.1.0"
# num_enum = "0.5.2"
time = "0.2.26"
# serialize/deserialize
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
lazy_static = "1.4.0"
# error
anyhow = "1.0.40"
# todo: conditional compile loggers
# logging 
env_logger = "0.8.3"
log4rs = "1.0.0" 
log = "0.4.14"
directories = "3.0.2"
prometheus = {version="0.12.0", optional=true}
hostname = "0.3.1"
# todo: simplify encapsulation
# using getset = "0.1.1"
lru = "0.6.6"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
# criterion = "0.3"
mockall = "0.10.1"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }

# [[bench]]
# name = "benches"
# path = "tests/benches.rs"
# harness = false

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# flow control related examples
[[example]]
name = "hello_world"
path = "../examples/flow/hello_world.rs"
required-features = ["full"]

[[example]]
name = "direct"
path = "../examples/flow/hello_world.rs"
required-features = ["full"]

[[example]]
name = "tokio"
path = "../examples/flow/tokio.rs"
required-features = ["full", "async"]

[[example]]
name = "macro"
path = "../examples/flow/macro.rs"
required-features = ["full"]

[[example]]
name = "warmup"
path = "../examples/flow/macro.rs"
required-features = ["full"]

[[example]]
name = "memory_adaptive"
path = "../examples/flow/memory_adaptive.rs"
required-features = ["full"]

[[example]]
name = "throttling"
path = "../examples/flow/throttling.rs"
required-features = ["full"]

[[example]]
name = "method"
path = "../examples/flow/method.rs"
required-features = ["full"]

# system metrics related examples
[[example]]
name = "inbound_qps"
path = "../examples/system/inbound_qps.rs"
required-features = ["full"]

[[example]]
name = "avg_rt"
path = "../examples/system/avg_rt.rs"
required-features = ["full"]

[[example]]
name = "cpu_usage"
path = "../examples/system/cpu_usage.rs"
required-features = ["full"]

[[example]]
name = "concurrency"
path = "../examples/system/concurrency.rs"
required-features = ["full"]

[[example]]
name = "load"
path = "../examples/system/load.rs"
required-features = ["full"]

# isolation related examples
[[example]]
name = "isolation"
path = "../examples/isolation/concurrency.rs"
required-features = ["full"]

# circuit breaker related examples
[[example]]
name = "error_count"
path = "../examples/circuit_breaker/error_count.rs"
required-features = ["full"]

[[example]]
name = "error_ratio"
path = "../examples/circuit_breaker/error_ratio.rs"
required-features = ["full"]

[[example]]
name = "slow_request"
path = "../examples/circuit_breaker/slow_request.rs"
required-features = ["full"]

# hotspot related examples
[[example]]
name = "hotspot_qps_reject"
path = "../examples/hotspot/qps_reject.rs"
required-features = ["full"]

[[example]]
name = "hotspot_qps_throttling"
path = "../examples/hotspot/qps_throttling.rs"
required-features = ["full"]

[[example]]
name = "hotspot_concurrency"
path = "../examples/hotspot/concurrency.rs"
required-features = ["full"]