[package]
name = "sentinel-motore"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentinel-motore/latest"
repository = "https://github.com/sentinel-group/sentinel-rust/tree/main/middleware/motore"
homepage = "https://sentinelguard.io/en-us/"
description = """
Sentinel middleware for Motore
"""
categories = ["concurrency", "network-programming", "development-tools"]
keywords = ["microservices", "flow-control", "sentinel", "reliability"]
exclude = ["/example"]

[features]
default = []
volo = ["dep:volo"]

[dependencies]
motore = "0.2.1"
sentinel-core = { version = "0.1.2" }
volo = { version = "0.2", optional = true }
