[package]
name = "sentinel-tonic"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentinel-tonic/latest"
repository = "https://github.com/sentinel-group/sentinel-rust/tree/main/middleware/tonic"
homepage = "https://sentinelguard.io/en-us/"
description = """
Sentinel middleware for Tonic
"""
categories = ["concurrency", "network-programming", "development-tools"]
keywords = ["microservices", "flow-control", "sentinel", "reliability"]
exclude = ["/example"]

[dependencies]
sentinel-core = { version = "0.1" }
sentinel-tower = { version = "0.1", path = "../tower", features = ["http"] }
tonic = "0.8.2"
