[package]
name = "sentinel-tower"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentinel-tower/latest"
repository = "https://github.com/sentinel-group/sentinel-rust/tree/main/middleware/tower"
homepage = "https://sentinelguard.io/en-us/"
description = """
Sentinel middleware for Tower
"""
categories = ["concurrency", "network-programming", "development-tools"]
keywords = ["microservices", "flow-control", "sentinel", "reliability"]
exclude = ["/example"]

[features]
default = []
http = ["dep:http"]

[dependencies]
sentinel-core = { version = "0.1" }
tower = "0.4"
http = { version = "0.2", optional = true }
