[package]
name = "sentinel-envoy-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sentinel-rs = { version = "0.1.0", path = "../../../sentinel", features = ["full", "proxy_envoy"] }
sentinel-macros = { version = "0.1.0", path = "../../../sentinel-macros" }
proxy-wasm = "0.1.4"
log = "0.4"
primes = "0.3.0"

