[package]
name = "sentinel-envoy-module"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sentinel-core = { version = "0.1.0", path = "../../../sentinel-core", features = ["full", "proxy_envoy"] }

proxy-wasm = "0.2.0"
log = "0.4"
