[package]
edition = "2021"
license = "MIT"
name = "volo-gen"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
prost = "0.11"
tokio = { version = "1", features = ["full"] }

pilota = "0.2"
volo = "0.2"
volo-grpc = "0.2"

[build-dependencies]
volo-build = "0.2"
